# asio_generic_service

./: .clang-format  .clang-tidy  CMakeLists.txt
src/: CMakeLists.txt  generic_service.hpp  generic_session.hpp  io_context_pool.hpp  main.cpp
